--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,15 @@
+body, html {
+  padding:0;
+  margin:0;
+  height: auto;
+  width: 100%;
+}
+
+.chart{
+  min-height: 100%;
+  display: block;
+}
+
 .axis--x path {
     display: none;
   }
@@ -7,4 +19,8 @@
   stroke: steelblue;
   stroke-width: 1.5px;
 }
-  
+
+.chart-container{
+  width: 100%;
+  height: 100%;
+}
