change from d3 to plotly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body, html {
   width: 100%;
 }
 
-.chart{
+/* .chart{
   min-height: 100%;
   display: block;
 }
@@ -23,4 +23,4 @@ body, html {
 .chart-container{
   width: 100%;
   height: 100%;
-}
+} */
